Software WebRender causes Proton tabs to render incorrectly
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox88 | --- | unaffected |
| firefox89 | --- | fixed |
| firefox90 | --- | fixed |
People
(Reporter: sam, Assigned: lsalzman)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(3 files)
|
19.46 KB,
image/png
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
Details | Review | |
|
9.61 KB,
patch
|
pascalc
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
The right side of Proton tabs render differently in Software WebRender when compared to both Hardware WebRender and Basic. The behavior is consistent across hardware and OS (example screenshots from macOS, but the difference is the same in Windows 10 on another machine).
Mozregression says this was caused by bug 1702329, which was a CSS change. Since this only looks bad in SW-WR, I am filing against that, but there is a chance this could be theme-related.
Updated•4 years ago
|
Updated•4 years ago
|
| Assignee | ||
Comment 1•4 years ago
|
||
We accidentally were clamping the horizontal stage of the separable blur some
number of samples too early before the end of the row, rather than at the end
of the row.
Updated•4 years ago
|
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 3•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
| Assignee | ||
Comment 4•4 years ago
|
||
Comment on attachment 9222313 [details]
Bug 1710325 - Fix offset clamping in SWGL blur fast-path. r?jrmuizel
Beta/Release Uplift Approval Request
- User impact if declined: Visual artifacts in some Proton UI chrome for Software WebRender users (which is being rolled out in 89).
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The impact is mostly confined to SW-WR users, and it is mostly a small cosmetic change.
- String changes made/needed:
Updated•4 years ago
|
Comment 5•4 years ago
•
|
||
Lee, you patch does not graft to beta cleanly as it changes tests that landed in bug 1706716 in 90, do you want to provide an updated patch for beta? Thanks
| Assignee | ||
Comment 6•4 years ago
|
||
I've rebased this version of the patch for 89. It will apply now.
Comment 7•4 years ago
|
||
Comment on attachment 9222642 [details] [diff] [review]
Bug 1710325 - Fix offset clamping in SWGL blur fast-path (89). r=jrmuizel
Approved for 89 beta 15, thanks.
Updated•4 years ago
|
Comment 8•4 years ago
|
||
| bugherder uplift | ||
Description
•