Bug 1710325 - Fix offset clamping in SWGL blur fast-path (89). r=jrmuizel a=pascalc